<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/device_name"
        android:text="@string/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/device_id"
        android:text="@string/device_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />
    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/onBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Turn On" />

        <Space android:layout_width="100dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/offBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Turn Off" />
    </LinearLayout>

    <Space android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/ws_status"
        android:text="@string/websocketws_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:id="@+id/ws_received"
        android:text="@string/websocketws_received"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <Space android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <View style="@style/Divider"/>
    <TextView
        android:id="@+id/live_status"
        android:text="@string/websocketlive_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <Space android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:id="@+id/device_status"
        android:text="@string/device_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/status_update_time"
        android:text="@string/status_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />



</LinearLayout>
